--- a/Form/index.html
+++ b/Form/index.html
@@ -33,7 +33,7 @@
                     <li>
                         <i class="fas fa-paper-plane"></i>
                         <span>Email:</span>
-                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=sagarsuriofficial@gmail.com" target="_blank">sagarsuriofficial@gmail.com</a>
+                        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=sagrsuri@gmail.com" target="_blank">SAGRSURI@GMAIL.COM</a>
                     </li>
                     <li>
                         <i class="fas fa-globe"></i>
