--- a/PROJECTS/Form/index.html
+++ b/PROJECTS/Form/index.html
@@ -19,7 +19,7 @@
 }
 
 body {
-    /* background-image: url('https://images.pexels.com/photos/735277/pexels-photo-735277.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1'); */
+    background-image: url('https://images.pexels.com/photos/735277/pexels-photo-735277.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
     background-repeat: no repeat;
     background-attachment: fixed;
     background-size: cover;
